# viz-bio2token

./: CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/viz_bio2token/: __init__.py  app.py  apt_bridge.py  bio2token_bridge.py  kanzi_bridge.py  pdb_utils.py
static/: app.js  index.html  style.css
