[project]
name = "viz-bio2token"
version = "0.1.0"
description = "Web-based visualization tool for bio2token encodings"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "biopython>=1.84",
    "torch==2.4.1+cu121",
    "mamba-ssm>=2.2.2",
    "transformers<5",
    "httpx>=0.27.0",
    "bio2token",
]

[project.scripts]
viz-bio2token = "viz_bio2token.app:main"

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.4.0%2Bcu121.html",
]
no-build-package = ["torch", "torchvision", "torchaudio", "torch-geometric", "torch-scatter", "torch-cluster", "mamba-ssm"]

[tool.uv.sources]
mamba_ssm = { url = "https://github.com/state-spaces/mamba/releases/download/v2.2.2/mamba_ssm-2.2.2+cu122torch2.4cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }
torch = { index = "pytorch" }
bio2token = { path = "/home/ubuntu/bio2token", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
